# IEEETurtleBot2

./: .gitignore  LIDAR_FILTERING_GUIDE.md  SETUP_AND_TESTING.md  manual.py  map.pgm  start_robot.sh
IEEE_Robot_2026/: .GPIOcommunication.py.swp  .controlArduino.py.swp  .spi_spam2.py.swp  .testCommunication.py.swp  .testingOutput.py.swp  GPIOcommunication.py  IEEE_Robot_2026.ino  controlArduino.py  controlArduinoSPI.py  emergencyTest.py  potentiallyBetterCode.py  schematic.dxf  schematic.dxf~  spi_spam2.py  testCommunication.py  testCommunication2.py  testingGPIO.py  testingOutput.py
IEEE_Robot_2026/3dModel/: CapPlateforweights.dxf  IEEErobotBase.20260302-140258.FCBak  IEEErobotBase.FCStd  LowerLimit.FCStd  WeightPlate(print5x).dxf  acc_bracket.20260320-174436.FCBak  acc_bracket_left.20260321-153750.FCBak  acc_bracket_left.20260324-083018.FCBak  acc_bracket_left.20260324-175033.FCBak  acc_bracket_left.FCStd  acc_bracket_r.20260321-153750.FCBak  acc_bracket_r.20260324-174738.FCBak  acc_bracket_r.20260324-213725.FCBak  acc_bracket_r.FCStd  actuatorPad.20260325-122115.FCBak  actuatorPad.FCStd  backWall.20260312-151936.FCBak  backWall.FCStd  betterShovel.FCStd  leftWall.20260311-220351.FCBak  motorPad.20260324-160638.FCBak  motorPad.FCStd  newLowerLimit.20260321-142654.FCBak  newLowerLimit.20260323-135619.FCBak  newLowerLimit.FCStd  openCRshelf.FCStd  pinballarm.FCStd  plaque.FCStd  shovel.20260226-141412.FCBak  shovel.20260302-195700.FCBak  shovel.FCStd  (+10 more)
install/test_auto/share/test_auto/: package.bash  package.sh  package.xml  package.zsh
log/: latest_build
(+65 files in other folders)
